--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 .jumbotron { 
-    background-color:#79b5c3;
-    color: #d6d6d6;
+    background-color:#000f70;
+    color: #a82929;
     padding:100px 25px;
 }
 
@@ -59,7 +59,7 @@
 
 .navbar {
     margin-bottom: 0;
-    background-color: #f4511e;
+    background-color: #000f70;
     z-index: 9999;
     border: 0;
     font-size: 12px !important;
