--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@
 }
 
 .container-fluid p {
-  font-size: 20px;
-  margin-top:50px;
+  font-family:'Roboto Condensed', sans-serif;
+  font-size: 18px;
+  margin-top:30px;
 }
 
 .bg-grey {
