--- a/style1.css
+++ b/style1.css
@@ -179,8 +179,18 @@
     }
   }
   
-    .teampics {
+  .teampics {
     max-width:100%;
     max-height:250px;
-    border:;
+  }
+  
+  .solutionpics {
+    max-width:100%;
+    vertical-align:middle;
+    margin:auto;
+    
+  }
+  
+  .row {
+    margin-bottom:50px;
   }
